var searchData=
[
  ['is_5fproto_5fenum_3c_20_3a_3asimplechat_3a_3acommandtype_20_3e',['is_proto_enum&lt; ::SimpleChat::CommandType &gt;',['../structgoogle_1_1protobuf_1_1is__proto__enum_3_01_1_1SimpleChat_1_1CommandType_01_4.html',1,'google::protobuf']]],
  ['is_5fproto_5fenum_3c_20_3a_3asimplechat_3a_3anetworkmessagetype_20_3e',['is_proto_enum&lt; ::SimpleChat::NetworkMessageType &gt;',['../structgoogle_1_1protobuf_1_1is__proto__enum_3_01_1_1SimpleChat_1_1NetworkMessageType_01_4.html',1,'google::protobuf']]],
  ['is_5fproto_5fenum_3c_20_3a_3asimplechat_3a_3auseraction_20_3e',['is_proto_enum&lt; ::SimpleChat::UserAction &gt;',['../structgoogle_1_1protobuf_1_1is__proto__enum_3_01_1_1SimpleChat_1_1UserAction_01_4.html',1,'google::protobuf']]],
  ['is_5fproto_5fenum_3c_20_3a_3asimplechat_3a_3auserpresence_20_3e',['is_proto_enum&lt; ::SimpleChat::UserPresence &gt;',['../structgoogle_1_1protobuf_1_1is__proto__enum_3_01_1_1SimpleChat_1_1UserPresence_01_4.html',1,'google::protobuf']]],
  ['is_5fproto_5fenum_3c_20_3a_3asimplechat_3a_3auserstatus_20_3e',['is_proto_enum&lt; ::SimpleChat::UserStatus &gt;',['../structgoogle_1_1protobuf_1_1is__proto__enum_3_01_1_1SimpleChat_1_1UserStatus_01_4.html',1,'google::protobuf']]]
];
